fixed weird spacing

--- a/src/Components/HowJoWorks/howjoworks.css
+++ b/src/Components/HowJoWorks/howjoworks.css
@@ -1,6 +1,5 @@
 .howjoworks {
     justify-content: center;
-    margin: 0% 25% 15% 25%;
     text-align: left;
     margin-bottom: 5rem !important;
     background-color: transparent !important;
